fix: .wrapper overflowing parent component

--- a/front-end/src/scss/_layout.scss
+++ b/front-end/src/scss/_layout.scss
@@ -89,6 +89,7 @@
 }
 
 .wrapper {
+  max-height: 100%;
   max-width: 600px;
 }
 
